IDEA-386568 [java]: cleanup
GitOrigin-RevId: e15317b169317cd1b2900498c150448c2da9f087